# game_engine

./: CMakeLists.txt  CMakePresets.json
engine/: CMakeLists.txt
engine/libs/: CMakeLists.txt
engine/libs/glad/include/glad/: glad.h
engine/libs/glad/src/: glad.c
engine/main/: GamePreferences.hpp
engine/src/engine/: Engine.cpp  Engine.hpp
engine/src/game/: GameObject.hpp
engine/src/scene/: GameScene.cpp  GameScene.hpp
galaga/: CMakeLists.txt
galaga/src/: main.cpp
